# PDF-RAG-Application

./: .gitignore  README.md  llm_interface.py  pdf_processor.py  pyproject.toml  rag_app.py  requirements.txt  run_tests.py  test_vector_store.py  ui.py  vector_store.py
pdf_rag_application/: main.py
pdf_rag_application/core/: llm_interface.py  rag_app.py  vector_store.py
pdf_rag_application/ui/: __init__.py  ui.py
src/: __init__.py  main.py
src/components/: __init__.py  llm_interface.py  pdf_processor.py  vector_store.py
src/web/: app.py
tests/: __init__.py  run_tests.py  test_vector_store.py
tests/components/: test_application.py  test_vector_store.py
tests/web/: test_app.py
