[project]
name = "pdf-rag-application"
version = "0.1.0"
description = "A RAG application for querying PDF documents"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "qdrant-client>=1.9.0",
    "sentence-transformers>=2.7.0",
    "transformers>=4.51.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "PyMuPDF>=1.23.0",
    "tiktoken>=0.5.0",
    "streamlit>=1.28.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]